# IntroToAIAgents

./: README.md  pyproject.toml
crew_ai_project/: main.py  pyproject.toml
default_project/: README.md  pyproject.toml  report.md
default_project/src/default_project/: crew.py  main.py
health/: README.md  pyproject.toml
health/src/health/: app.py  crew.py  data_schemas.py  main.py
health/src/health/config/: agents.yaml  tasks.yaml
sales_agent/: README.md  pyproject.toml
sales_agent/src/sales_agent/: crew.py  main.py
sales_agent/src/sales_agent/config/: agents.yaml  tasks.yaml
sales_agent/src/sales_agent/tools/: custom_tool.py
youtube_agents/: YouTubeAgents.md  pyproject.toml
youtube_agents/src/youtube_agents/: __init__.py  crew.py  main.py
youtube_agents/src/youtube_agents/config/: agents.yaml  tasks.yaml
youtube_agents/src/youtube_agents/tools/: __init__.py  custom_tool.py
