[project]
name = "default_project"
version = "0.1.0"
description = "default_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
default_project = "default_project.main:run"
run_crew = "default_project.main:run"
train = "default_project.main:train"
replay = "default_project.main:replay"
test = "default_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
