[project]
name = "youtube_agents"
version = "0.1.0"
description = "youtube_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "firecrawl-py>=2.16.5",
]

[project.scripts]
youtube_agents = "youtube_agents.main:run"
run_crew = "youtube_agents.main:run"
train = "youtube_agents.main:train"
replay = "youtube_agents.main:replay"
test = "youtube_agents.main:test"

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.crewai]
type = "crew"
